tests/ui/derives/derives-span-Debug-tuple-struct.stderr
error[E0277]: `Error` doesn't implement `Debug`
  --> $DIR/derives-span-Debug-tuple-struct.rs:8:5
   |
LL | #[derive(Debug)]
   |          ----- in this derive macro expansion
LL | struct Struct(
LL |     Error
   |     ^^^^^ `Error` cannot be formatted using `{:?}`
  --> $SRC_DIR/core/src/fmt/mod.rs:LL:COL
   |
   = note: in this expansion of `#[derive(Debug)]`
   |
   = help: the trait `Debug` is not implemented for `Error`
   = note: add `#[derive(Debug)]` to `Error` or manually `impl Debug for Error`
help: consider annotating `Error` with `#[derive(Debug)]`
   |
LL + #[derive(Debug)]
LL | struct Error;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
